# whyfi

./: .env  .env_sample  .gitignore  Dockerfile  RAG.ipynb  README.md  agent.py  app.py  docker-compose.yaml  main.py  pyproject.toml  requirements.txt  streamlit.py  whyfi-final.py
add-trends/: README.md  app.py  streamlit-trends.py  streamlit.py
add-trends/chrome-extension/: popup.js  styles.css
add-trends/core/: __init__.py  db.py  news.py  rag.py  trends.py
agent/: __init__.py  agent.py  prompt.py  tool.py
chroma_index/: chroma.sqlite3
chrome-extension/: app.py  popup.html  popup.js  styles.css
core/: __init__.py  db.py  gcp_utils.py  news.py  prompt.py  rag.py  utils.py
db/: __init__.py  base.py  chroma.py  chromadb.py
db/chroma/: chroma.py
db/data/: cleaned_word_dict.csv
db/milvus/: milvus.py
final/: README.md  app.py  requirements.txt  streamlit.py
final/chrome-extension/: background.js  manifest.json  popup.html  (+1 more)
keyword/: keywords_2025.01.json
keywords/: keywords_2025.03.json  keywords_202501.json
main/: whyfi-final-chroma.ipynb  whyfi.ipynb
preprocess/: __init__.py  chunks.csv  langchain_parser.ipynb  llama-parsed.md  load_data.ipynb  load_data.py  multimodal-llama-parsed-with-instructions.md  multimodal-llama-parsed.md  parser_tesseract.ipynb  preprocess.ipynb  rag_trial.ipynb  word_dict.csv  한국은행 경제금융용어 700선.pdf.md
prev/: chroma.py  main_prev.py
streamlit/: app.py  requirements.txt  run.md  whyfi-final.py
utils/: __init__.py  clova_embedding.py  db.py  news.py  pop_words.py  rag.py  search_api_description.md  web_search.py
(+18 files in other folders)
