[tool.poetry]
name = "whyfi"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain-core = "^0.3.30"
langchain-community = "^0.3.14"
langchain-google-genai = "^2.0.9"
huggingface-hub = "^0.27.1"
langchain = "^0.3.14"
sentence-transformers = "^3.3.1"
pandas = "^2.2.3"
faiss-cpu = "^1.9.0.post1"
langchain-huggingface = "^0.1.2"
langchain-chroma = "^0.2.0"
numpy = ">=1.26.2,<2.0.0"
fastapi = "^0.115.6"
pydantic = "^2.10.5"
uvicorn = "^0.34.0"
streamlit = "^1.41.1"
tavily-python = "^0.5.0"
pymilvus = {extras = ["model"], version = "^2.5.3"}
langchain-milvus = "^0.1.8"
nltk = "^3.9.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
